--- a/SpringBeanExample/pom.xml
+++ b/SpringBeanExample/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>SpringBeanExample</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
